@@ -117,6 +117,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha5...master[Check the HEAD d
 *Filebeat*
 - Introduce close_timeout harvester options {issue}1926[1926]
 - Strip BOM from first message in case of BOM files {issue}2351[2351]
+- Add command line option -once to run filebeat only once and then close {pull}2456[2456]
 
 
 - Add harvester_limit option {pull}2417[2417]
